Correctly clear conditions for prefetching (bucket comparison) (#57)